--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,8 +57,8 @@ branch = true
 python = "^3.9"
 datastreamservicelib = "^1.12"
 click = "^8.0"
-torch = "^2.6.0"
-torchvision = "^0.21.0"
+torch = ">=1.5.0,<2.6.0"
+torchvision = ">=0.10.0"
 aiohttp = "^3.11.11"
 
 [tool.poetry.group.dev.dependencies]
